fix(harmonie.js): Change wording in the "Diminue les douleurs articulaires" section style(harmonie.js): Add visited link color style to the external link The wording in the "Diminue les douleurs articulaires" section has been changed to improve clarity. The style of the external link has been updated to include a visited link color.
fix(nav.scss): Adjust z-index value for navbar
The z-index value for the navbar has been adjusted to ensure it appears above other elements on the page.

style(productCard.scss): Adjust z-index values for elements in the product card summary
The z-index values for elements in the product card summary have been adjusted to ensure proper layering and visibility.

--- a/frontend/src/sass/components/_nav.scss
+++ b/frontend/src/sass/components/_nav.scss
@@ -1,9 +1,9 @@
 .navbar {
+  z-index: 100;
   display: grid;
   grid-template:
     "b a a" 1fr
     "b c c" 1fr / 1fr 2fr;
-  z-index: 1;
   height: 100px;
   padding-top: 10px;
   width: 100%;
